manifests/web-app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: external
  #   service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
  #   service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  selector:
    app: backend
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
