manifests/web-app/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: backend-service
      port:
        number: 3000
